Fix color contrast for better accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ details, footer, header, nav, section {
   color: #666;
 }
 #reviews-list > li > p:nth-child(3) {
-  background-color: #ab8e37;
+  background-color: #836715;
   padding: 1em;
   width: 90px;
   text-align: center;
